dri_common.h:58:8: error: unknown type name '__GLXDRIdrawable'
In file included from ../src/glx/glxext.c:53:
../src/glx/dri_common.h:58:8: error: unknown type name '__GLXDRIdrawable'; did you mean '__DRIdrawable'?
extern __GLXDRIdrawable *
^~~~~~~~~~~~~~~~
__DRIdrawable
../include/GL/internal/dri_interface.h:65:34: note: '__DRIdrawable' declared here
typedef struct __DRIdrawableRec __DRIdrawable;
^
b699d070a6de273fb3a964e05944b203d0b57090 is the first bad commit
commit b699d070a6de273fb3a964e05944b203d0b57090
Author: Emil Velikov <emil.velikov@collabora.com>
Date: Wed Mar 4 17:52:04 2020 +0000
glx: set the loader_logger early and for everyone
Currently we set the logger only for DRI3. Even though it's used nearly
everywhere. For platforms where we don't the function is effectively a
no-op.
With this in place, LIBGL_DEBUG=verbose works across the board.
Fixes: d971a4230d5 ("loader: Factor out the common driver opening logic from each loader.")
Cc: Eric Anholt <eric@anholt.net>
Signed-off-by: Emil Velikov <emil.velikov@collabora.com>
Reviewed-by: Adam Jackson <ajax@redhat.com>
Reviewed-by: Eric Engestrom <eric@engestrom.ch>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/4084>
src/glx/dri3_glx.c | 2 --
src/glx/glxext.c | 4 ++++
2 files changed, 4 insertions(+), 2 deletions(-)
bisect run success
cc: @evelikov