src/glx/glxext.c
@@ -50,7 +50,9 @@
 #include "glxextensions.h"
 
 #include "util/debug.h"
+#ifndef GLX_USE_APPLEGL
 #include "dri_common.h"
+#endif
 
 #include <X11/Xlib-xcb.h>
 #include <xcb/xcb.h>
@@ -908,8 +910,10 @@ __glXInitialize(Display * dpy)
 
    dpyPriv->drawHash = __glxHashCreate();
 
+#ifndef GLX_USE_APPLEGL
    /* Set the logger before the *CreateDisplay functions. */
    loader_set_logger(dri_message);
+#endif
 
    /*
     ** Initialize the direct rendering per display data and functions.
